roles/openshift-apps/openscanhub/files/deployment-redis-6-c9s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    deployment.kubernetes.io/revision: "1"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"redis-6-c9s:c9s","namespace":"openscanhub"},"fieldPath":"spec.template.spec.containers[?(@.name==\"redis-6-c9s\")].image","pause":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2024-03-07T13:22:42Z"
  generation: 1
  labels:
    app: redis-6-c9s
    app.kubernetes.io/component: redis-6-c9s
    app.kubernetes.io/instance: redis-6-c9s
    app.kubernetes.io/name: redis-6-c9s
    app.kubernetes.io/part-of: openscanhub
    app.openshift.io/runtime-namespace: openscanhub
  name: redis-6-c9s
  namespace: openscanhub
  resourceVersion: "772873714"
  uid: 1cb2c91a-fa3d-4d27-8911-d66254fb9881
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: redis-6-c9s
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: redis-6-c9s
        deployment: redis-6-c9s
    spec:
      containers:
      - image: quay.io/sclorg/redis-6-c9s:c9s
        imagePullPolicy: IfNotPresent
        name: redis-6-c9s
        ports:
        - containerPort: 6379
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/redis/data
          name: pvc-var-lib-redis-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: pvc-var-lib-redis-data
        persistentVolumeClaim:
          claimName: pvc-var-lib-redis-data
