roles/openshift-apps/openscanhub/files/deployment-redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
    app.kubernetes.io/component: redis
    app.kubernetes.io/instance: redis
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: openscanhub
    app.openshift.io/runtime-namespace: openscanhub
  name: redis
  namespace: openscanhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
        deployment: redis
    spec:
      containers:
      - image: quay.io/sclorg/redis-6-c9s:c9s
        imagePullPolicy: IfNotPresent
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/redis/data
          name: pvc-var-lib-redis-data
      restartPolicy: Always
      volumes:
      - name: pvc-var-lib-redis-data
        persistentVolumeClaim:
          claimName: pvc-var-lib-redis-data
