roles/openshift-apps/openscanhub/files/route-redis.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: redis
    app.kubernetes.io/component: redis
    app.kubernetes.io/instance: redis
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: openscanhub
    app.openshift.io/runtime-version: c9s
  name: redis
  namespace: openscanhub
spec:
  host: redis
  port:
    targetPort: 6379-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: redis
    weight: 100
  wildcardPolicy: None
