roles/openshift-apps/openscanhub/files/service-fedora-osh-hub.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fedora-osh-hub
    app.kubernetes.io/component: fedora-osh-hub
    app.kubernetes.io/instance: fedora-osh-hub
    app.kubernetes.io/name: fedora-osh-hub
    app.kubernetes.io/part-of: openscanhub
  name: fedora-osh-hub
  namespace: openscanhub
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fedora-osh-hub
    deployment: fedora-osh-hub
  sessionAffinity: None
  type: ClusterIP
