roles/openshift-apps/openscanhub/files/service-redis-6-c9s.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2024-03-07T13:22:42Z"
  labels:
    app: redis-6-c9s
    app.kubernetes.io/component: redis-6-c9s
    app.kubernetes.io/instance: redis-6-c9s
    app.kubernetes.io/name: redis-6-c9s
    app.kubernetes.io/part-of: openscanhub
    app.openshift.io/runtime-version: c9s
  name: redis-6-c9s
  namespace: openscanhub
  resourceVersion: "772873089"
  uid: c72c04f9-939d-417d-867e-e29dea2afbfa
spec:
  clusterIP: 172.30.51.75
  clusterIPs:
  - 172.30.51.75
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 6379-tcp
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis-6-c9s
    deployment: redis-6-c9s
  sessionAffinity: None
  type: ClusterIP
